# WaLiAPI

./: README.md  package.json  pnpm-lock.yaml  waliapi_build_complete_20260718.md  waliapi_usage_guide_20260718.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 005_add_response_choices.sql  006_add_trace_id.sql
src-tauri/src/: lib.rs
src-tauri/src/commands/: import_export.rs  log.rs  mod.rs  settings.rs
src-tauri/src/core/: dispatcher.rs  proxy.rs
src-tauri/src/db/: models.rs  repository.rs
src-tauri/src/server/: handlers.rs
src/components/: ChannelForm.tsx  ImportDialog.tsx
src/components/layout/: Sidebar.tsx
src/lib/: api.ts
src/pages/: ChannelsPage.tsx  DashboardPage.tsx  LogsPage.tsx  SettingsPage.tsx  UsagePage.tsx
src/types/: index.ts
